--- a/BIFF Home - Boulder International Film Festival.html
+++ b/BIFF Home - Boulder International Film Festival.html
@@ -550,7 +550,7 @@ else{w.loadCSS=loadCSS}}(typeof global!=="undefined"?global:this))
 		<div class="edgtf-close-side-menu-holder">
 		<div class="edgtf-close-side-menu-holder-inner">
 			<a href="#" target="_self" class="edgtf-close-side-menu">
-				<i aria-hidden="true" class="ion-close" style="">close menu</i>
+				<i aria-hidden="true" class="ion-close" style="" title="close menu" aria-label="close menu"></i>
 			</a>
 		</div>
 	</div>
@@ -787,7 +787,7 @@ else{w.loadCSS=loadCSS}}(typeof global!=="undefined"?global:this))
                                             <div class="edgtf-mobile-menu-opener">
                             <a href="javascript:void(0)">
                     <span class="edgtf-mobile-opener-icon-holder">
-                        <i class="edgtf-icon-dripicons dripicon dripicon-menu " >drip menu</i>                    </span>
+                        <i class="edgtf-icon-dripicons dripicon dripicon-menu " title="drip menu" aria-label="drip menu"></i>                    </span>
                             </a>
                         </div>
                                                                 <div class="edgtf-position-center">
